# metaframe

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: python-package.yaml
metaframe/: __init__.py  metaframe.py
tests/: test_metaframe.py
warp/spark/: dataframe.py
