[metadata]
name = spark-metaframe
version = 0.1
url = https://github.com/invent-analytics/metaframe
author = Invent Software Team
author_email = software@inventanalytics.com
description = Spark DataFrame with metadata
long_description = file: README.md
long_description_content_type = text/markdown
classifier = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 1 - Planning

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pyspark
